change log level && make user-service pom independent from parent-service